-----------
v3.0.11-git
-----------

[jan] Fix importing vCards with empty X-ANNIVERSARY attributes (Bug #10557).
[jan] Update Japanese translation (Hiromi Kimura <hiromi@tac.tsukuba.ac.jp>).


-------
v3.0.10
-------

[mjr] Add the ability to specify the fields to return from contacts/search.
[jan] Fix importing contacts with composite fields.
[jan] Fix LDAP connection test (Bug #10554).
[gwr] Avoid including the owner name into the default share (Kolab backend).


------
v3.0.9
------

[rla] Turba LDAP Driver now only rewrites changed attributes (Bug #9343).
[mjr] Run attribute values through decode_attribute hook when exporting.
[mjr] Ensure encode_attribute hook is called on imported objects.
[mjr] Improve handling of removeUserData.
[mjr] Honor auto_create configuration setting (qoole.horde@lillimoth.com, Bug
      #10452)
[jan] Don't allow to search binary fields.


------
v3.0.8
------

[jan] Fix attribute name for assistant phone (Bug #10449).


------
v3.0.7
------

[jan] Add missing migration script (Bug #10436).


------
v3.0.6
------

[mjr] Fix issue with synchronizing deleted contacts (Bug #10422).
[jan] Fix searching for duplicates on some databases (Bug #10383).
[mjr] Add and support more attributes by default.


------
v3.0.5
------

[mjr] Fix obtaining default share via Turba's API (vilius@lnk.lt, Bug #10393).
[mjr] Force ActiveSync device reset after sync_books pref is changed
      (Request #10342).

------
v3.0.4
------

[jan] Pass contact object to decode_attribute hook (kd@tu-cottbus.de, Bug
      #10287).
[jan] Complete fix for importing LDIF files (Bug #10139).


------
v3.0.3
------

[rla] Support multiple address books in search portal block (Request #8786).
[mjr] Fix importing LDIF files (Bug #10139).
[mjr] Fix issue introduced in 3.0.1 that caused contact images to not display
      (Bug #10050).
[jan] Fix editing of multiple contacts at once (Bug #10085).
[jan] Enable homeAdress and workAdress composite fields by default.


------