@@ -77,9 +77,9 @@ NICKNAME:yunosh
 X-EPOCSECONDNAME:yunosh
 LABEL;HOME;ENCODING=QUOTED-PRINTABLE;CHARSET=UTF-8:Sch=C3=B6nestr. 15=0D=0A=
  33604 Bielefeld
-TEL;HOME:+49 521 555123
-TEL;WORK:+49 521 555456
-TEL;CELL:+49 177 555123
+TEL;HOME;VOICE:+49 521 555123
+TEL;WORK;VOICE:+49 521 555456
+TEL;CELL;VOICE:+49 177 555123
 TEL;FAX:+49 521 555789
 TEL;PAGER:+49 123 555789
 BDAY:1971-10-01
@@ -111,9 +111,9 @@ EMAIL;TYPE=INTERNET:jan@horde.org
 NICKNAME:yunosh
 X-EPOCSECONDNAME:yunosh
 LABEL;TYPE=HOME:Schönestr. 15\n33604 Bielefeld
-TEL;TYPE=HOME:+49 521 555123
-TEL;TYPE=WORK:+49 521 555456
-TEL;TYPE=CELL:+49 177 555123
+TEL;TYPE=HOME,VOICE:+49 521 555123
+TEL;TYPE=WORK,VOICE:+49 521 555456
+TEL;TYPE=CELL,VOICE:+49 177 555123
 TEL;TYPE=FAX:+49 521 555789
 TEL;TYPE=PAGER:+49 123 555789
 BDAY:1971-10-01
@@ -154,9 +154,9 @@ EMAIL;TYPE=INTERNET:jan@horde.org
 NICKNAME:yunosh
 X-EPOCSECONDNAME:yunosh
 LABEL;TYPE=HOME:Schönestr. 15\n33604 Bielefeld
-TEL;TYPE=HOME:+49 521 555123
-TEL;TYPE=WORK:+49 521 555456
-TEL;TYPE=CELL:+49 177 555123
+TEL;TYPE=HOME,VOICE:+49 521 555123
+TEL;TYPE=WORK,VOICE:+49 521 555456
+TEL;TYPE=CELL,VOICE:+49 177 555123
 TEL;TYPE=FAX:+49 521 555789
 TEL;TYPE=PAGER:+49 123 555789
 BDAY:1971-10-01
